--- a/frontend/calculator.html
+++ b/frontend/calculator.html
@@ -44,6 +44,18 @@
         border-left-width: 2px;
       }
 
+      #split_display {
+        width: 50%;
+        height: 100%;
+        overflow: auto;
+        border-left-style: solid;
+        border-left-color: white;
+        border-left-width: 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
       #message_display {
         width: 100vw;
         height: 50vh;
@@ -118,6 +130,12 @@
         border-bottom-color: white;
         border-bottom-width: 2px;
       }
+
+      #split {
+        font-size: 7vw;
+        color: white;
+        font-weight: 600;
+      }
     </style>
   </head>
   <body onbeforeunload="return closeWebSocket()">
@@ -131,7 +149,7 @@
     </div>
 
     <script>
-      const SKIP_FULLSCREEN = 0;
+      const SKIP_FULLSCREEN = 1;
       let socket = undefined;
       let clock;
       let time_delta;
@@ -139,7 +157,10 @@
       let wakeLock = null;
       let displaying_sendoffs = false;
       let next_up_display;
-      let green_amount;
+      let split_display;
+      let green_amount_main_clock = 0;
+      let green_amount_split = 0;
+      let time_to_stop_displaying_split = Date.now();
 
       function closeWebSocket() {
         socket.close();
@@ -285,19 +306,33 @@
         )}`;
         const set_table = document.getElementById("set_table");
 
-        if (next_up_display && green_amount > -0) {
+        if (green_amount_split > -1) {
+          split_display.style.backgroundColor =
+            "rgb(0, " + green_amount_split + ", 0)";
+          green_amount_split--;
+        }
+
+        if (Date.now() >= time_to_stop_displaying_split) {
+          set_display.style.display = "";
+          split_display.style.display = "none";
+        } else {
+          set_display.style.display = "none";
+          split_display.style.display = "";
+        }
+
+        if (next_up_display && green_amount_main_clock > -0) {
           //next_up_display.style.backgroundColor =
-          //  "rgb(0, " + green_amount + ", 0)";
+          //  "rgb(0, " + green_amount_main_clock + ", 0)";
           document.getElementById("container").style.backgroundColor =
-            "rgb(0, " + green_amount + ", 0)";
-          green_amount--;
+            "rgb(0, " + green_amount_main_clock + ", 0)";
+          green_amount_main_clock--;
         }
 
         let next_up_time = document.getElementById("next_up_time");
 
         if (set_table && clock.innerText == next_up_time.innerText) {
           //move on to the next swimmer
-          green_amount = 255;
+          green_amount_main_clock = 255;
           const first_row = set_table.children[1].children[0];
           if (!first_row) return 0;
           let parent_element = first_row.parentElement;
@@ -531,6 +566,15 @@
         set_display.id = "set_display";
         message_display.appendChild(set_display);
 
+        split_display = document.createElement("div");
+        split_display.id = "split_display";
+        split_display.style.display = "none";
+        message_display.appendChild(split_display);
+
+        let split = document.createElement("p");
+        split.id = "split";
+        split_display.appendChild(split);
+
         displaying_sendoffs = true;
       }
 
@@ -547,7 +591,20 @@
         }
       }
 
-      function processSplit(split) {}
+      function processSplit(split) {
+        const set_display = document.getElementById("set_display");
+        const split_display = document.getElementById("split_display");
+        const split_p = document.getElementById("split");
+        split_p.innerHTML =
+          '<span style="text-decoration: underline">Split:</span><br />' +
+          split;
+        green_amount_split = 255;
+
+        set_display.style.display = "none";
+        split_display.style.display = "";
+
+        time_to_stop_displaying_split = Date.now() + 10000;
+      }
     </script>
   </body>
 </html>
