--- a/frontend/coachcalculator.html
+++ b/frontend/coachcalculator.html
@@ -88,7 +88,7 @@
 
       #room_code {
         float: left;
-        width: 20%;
+        width: 25%;
         height: 100%;
         display: flex;
         align-items: center;
@@ -102,7 +102,7 @@
 
       #connections_div {
         float: left;
-        width: 50%;
+        width: 25%;
         height: 100%;
         display: flex;
         align-items: center;
@@ -116,13 +116,14 @@
 
       #clock_container {
         height: 100%;
-        width: 30%;
+        width: 50%;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
         align-content: center;
         align-items: center;
         min-width: 235px;
+        justify-content: center;
       }
       #clock_contining_div {
         display: flex;
@@ -272,6 +273,14 @@
         font-size: 30px;
         font-weight: 600;
         font-family: monospace;
+      }
+
+      #clock_containing_div {
+        height: 100%;
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     </style>
   </head>
@@ -568,6 +577,7 @@
             split_clock.innerText = display_time;
           }
         });
+        fitText(clock);
       }
 
       function requestFullScreen(div_to_fullscreen) {
@@ -1205,6 +1215,35 @@
         send_off_mode_button.style.display = "none";
         lanes_display.style.display = "flex";
         splits_display.style.display = "none";
+      }
+
+      function fitText(element) {
+        let RESIZE = false;
+        let div = element.parentElement;
+
+        let text_size = 3;
+
+        if (element.old_height == undefined || element.old_width == undefined)
+          RESIZE = true;
+        else if (
+          element.old_height != div.clientHeight ||
+          element.old_width != div.clientWidth
+        )
+          RESIZE = true;
+
+        if (RESIZE) {
+          element.style.fontSize = text_size + "px";
+          while (
+            div.clientHeight > element.clientHeight &&
+            div.clientWidth > element.clientWidth
+          ) {
+            element.style.fontSize = text_size + "px";
+            text_size++;
+          }
+
+          element.old_height = div.clientHeight;
+          element.old_width = div.clientWidth;
+        }
       }
     </script>
   </body>
