--- a/frontend/calculator.html
+++ b/frontend/calculator.html
@@ -648,7 +648,7 @@
           element.old_height = div.clientHeight;
           element.old_width = div.clientWidth;
         }
-      } //
+      } // test
     </script>
   </body>
 </html>
